address layout issues

--- a/css/layout.css
+++ b/css/layout.css
@@ -91,7 +91,8 @@
 		.slider-wrapper .bx-wrapper,
 		.slider-wrapper,
 		.main-slider {
-			height: 500px !important;
+			min-height: 700px !important;
+			max-height: 800px !important;
 		}
 
 	}
